<resources>
    <!-- Name App -->
    <string name="app_name">اپلیکیشن خبری</string>

    <!-- other -->
    <string name="nav_header">fara source</string>
    <string name="box_name">دسته بندی مطالب</string>
    <string name="comment_name">دیدگاه های پست</string>
    <string name="page_name">برگه ها</string>
    <string name="date_name">آرشیو مطالب</string>
    <string name="mark_name">نشانه ها</string>
    <string name="empty">موردی برای نمایش وجود ندارد.</string>
    <string name="not_found">موردی برای نمایش پیدا نشد!.</string>
    <string name="search">جستجو</string>

    <!-- post item -->
    <string name="comments">دیدگاه ها</string>
    <string name="open_in">باز کردن در مرورگر</string>
    <string name="send_text">ارسال متن</string>
    <string name="copy_text">کپی متن</string>
    <string name="send_link">اشتراک لینک</string>
    <string name="copy_link">کپی لینک</string>

    <!-- menu item -->
    <string name="menu">منو</string>
    <string name="home">خانه</string>
    <string name="boxs">دسته ها</string>
    <string name="share">اشتراک برنامه</string>
    <string name="nav_about">درباره ما</string>
    <string name="nav_info">ویژگی های برنامه</string>
    <string name="book_mark">نشان شده ها</string>

    <string name="instagram">اینستاگرام</string>
    <string name="telegram">تلگرام</string>
    <string name="service_text">شرایط استفاده</string>
    <string name="msg_about">
تمامی حقوق این اپلیکیشن متعلق به فرا سورس می باشد.
\n\n
Copy Right 2019
\n
برنامه نویس: عباس قاسمی
    </string>

    <string name="msg_service"> ویژگی و امکانات اپلیکیشن خبری:\n
1- دارای فیلم آموزشی 0 تا 100 راه اندازی برنامه با کیفیت بالا \n
 2- متریال دیزاین \n
 3- امکان شخصی سازی آسان\n
 4- کدنویسی تمیز و سرعت بالای اجرا\n
 5- پشتیبانی از اندروید 4.0 به بالا (تقریبا 95% گوشی های داخل ایران)\n
 6- بدون نیاز به گرفتن دسترسی های خاص\n
 7- قابلیت انتشار در تمامی مارکت ها بالاخص کافه بازار \n
 8- حجم پائین \n
 9- دریافت و نمایش مطالب سایت\n
 10- دریافت و نمایش دسته بندی ها\n
 11- دریافت و نمایش آرشیو سایت\n
 12-امکان فیلتر کردن دسته بندی ها\n
 13- امکان فیلتر کردن برگه های سایت\n
 14- امکان فیلتر کردن جستجو\n
 15- امکان بازشدن لینک پست ها در گوگل کروم و نمایش درون خود برنامه\n
 16- جستجو در مطالب سایت\n
 17- استفاده از تبدیل صدا به متن گوگل در جستجو\n
 18- نمایش کامنت پست ها به شکل تلگرام\n
 19- امکان ارسال متن و لینک پست ها\n
 20- امکان کپی متن و لینک پست ها\n
 21- امکان حذف یا اعمال خط جدا کننده پست ها\n
 22- امکان تعریف لینک ارتباط با ما\n
 23- امکان تعریف عنوان یا نام نویسنده پست ها داخل سورس (درصورت عدم تعریف،نام نویسنده دریافت شده از سایت نمایش داده می شود)\n
 24- امکان تعریف فرمت تاریخ ها با آموزش کامل\n
 25-امکان فعال یا غیر فعال سازی انیمیشن در برنامه\n
 26- امکان اشتراک برنامه\n
 27- دارای صفحه درباره ما اختصاصی\n
 28- امکان تعریف شرایط استفاده از برنامه یا عنوان دیگری در برنامه\n
 29- دارای صفحه آغازین با قابلیت حذف\n
 30- امکان مشخص کردن زمان ماندن در صفحه آغازین\n
 31- امکان تعریف خروج از برنامه با دابل کلیک یا نمایش دیالوگ\n
 32- دو حالت نمایش برای متون پست ها\n
 33- امکان مشخص کردن لیمیت و حد دریافت مطالب از سایت در هر درخواست کاربر\n
 34- امکان تعریف کتابخانه پوشه\n
 35- امکان مدیریت تعداد نصب های برنامه و دسترسی به آمار کاربران از جمله نسخه اندروید،مدل گوشی و …\n
36- امکان ارسال پوش نوفتیکیشن به کاربران برنامه
        \n\n
        لیست تغییرات ورژن 2.0: \n
        1- کش شدن اطلاعات و امکان فعال سازی تایمر نابود سازی کش ها \n
        2- امکان نشانه گذاری ایتم ها\n
        3- امکان رفریش صفحات\n
        4- صفحه ارتباط باما اختصاصی\n
        5- سه قالب نمایش برای پست ها\n
        6- امکان غیرفعال کردن آرشیو و برگه ها\n
        7- راست چین شدن منو\n
        8- تغییرات جزئی در جستجو\n
        9- بهبود گرافیک برنامه\n
        10- تغییرات در اشتراک گذاری\n
        11- بهبود ساختار برنامه\n
        12- امکان تغییر فونت
        \n\n
        لیست تغییرات ورژن 2.1: \n
        1- رفع مشکلات گرافیکی \n
        2- امکان نشانه گذاری در قسمت نمایش پست ها\n
        3- بهبود نمایش عنوان های بلند\n
        4- بازشدن لینک های درون پست در داخل برنامه\n
        5- رفع و بهبود موراد دیگر\n
        \n\n
        لیست تغییرات ورژن 3.0: \n
        1- بازطراحی برنامه به سبک روز \n
        2- امکان گرفتن اسکرین شات از خبرها،ویرایش و اشتراک آن \n
        3- اضافه شدن حالت شب \n
        4- بهبود های فراوان در عملکرد برنامه \n
        5- و تغییرات جزئی و کلی دیگر که در نسخه دمو می بینید.
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources><!--
    App developer: FaraSource By A B B A S Q A S E M I.

    this source code is licenced by Fara Source
    Please Do not Use it unless buy it from:
       https://farasource.ir/
    copy right 2017-2018 , All rights reserved for farasource.

           F A R A S O U R C E . I R  F A R A S O U R C E . I R  F A R A S O U R C E . I R

    توسعه دهنده: فراسورس توسط عباس قاسمی
    استفاده از سورس تنها در صورتي مجاز است که از آدرس زير خريداري شده باشد:
       http://farasource.ir/
        تمامي حقوق براي فراسورس محفوظ ميباشد ، هرگونه کپي برداري از سايت و سورس غير مجاز و حرام ميباشد.
        هر گونه کپي برداري پيگرد قانوني دارد 2017-2018 .
        استفاده از اين فايل ، يعني شما قوانين درج شده در سايت فرا سورس هنگام خرید آن را قبول داشته ايد.

           F A R A S O U R C E . I R  F A R A S O U R C E . I R  F A R A S O U R C E . I R
    -->