<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/tab_categories"
        android:icon="@drawable/ic_storage"
        android:title="@string/boxs" />

    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/tab_favorites"
        android:icon="@drawable/ic_turned_not"
        android:title="@string/mark_name" />
    <item
        android:id="@+id/tab_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
</menu>