<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/d_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/d_colorPrimary"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/d_toolbarTextColor"
        android:textSize="18dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="حالت شب"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/pages"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/page_name"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:id="@+id/pages_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />


            <TextView
                android:id="@+id/date_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/date_name"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:id="@+id/date_name_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/share"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="ارسال ایمیل"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="تماس"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:id="@+id/call_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/telegram"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/instagram"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/service_text"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#868686" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/nav_about"
                android:textColor="@color/d_textColor"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
