<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/l_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:paddingTop="10dp"
                    android:text="حالت شب"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/night_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center|right"
                    android:text="فعال"
                    android:textSize="12dp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/pages"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/page_name"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:id="@+id/pages_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/share"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="ارسال ایمیل"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="تماس"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:id="@+id/call_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/telegram"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/instagram"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/service_text"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?selectableItemBackground"
                android:gravity="center|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/nav_about"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
